--- a/packages/host/tsconfig.json
+++ b/packages/host/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "astro/tsconfigs/strict",
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"],
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@mf-types/*": ["./@mf-types/*"]
-    }
-  },
-  "include": ["**/*.ts", "**/*.tsx", "*.d.ts", "**/*.js", "src"]
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
+  }
 }
